# gif-to-sprite

./: README.md  pyproject.toml  split_gif.py
src/gif_to_sprite/: __init__.py  __main__.py  split_gif.py  sprite_from_images.py
